--- a/_posts/2019-12-22-the-us-narrative-today.html
+++ b/_posts/2019-12-22-the-us-narrative-today.html
@@ -1543,108 +1543,107 @@ stories:
   domain: http://www.observer-reporter.com/
   link: https://observer-reporter.com/ap/international/australia-s-leader-apologizes-for-vacation-amid-wildfires/article_4d764d5f-cc18-5de3-84a6-3c091d2c4dec.html
 images:
-- name: server-cloud-server-racks-clouds-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-three.jpg
-- name: udnie-IMG_7288.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7288.jpg
-- name: bf-skinner-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bletchley-computer-racks.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
-- name: oldroad-old-road-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-pablo-blue.jpg
-- name: trucksilo-trucksilo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crafty-painting.jpg
-- name: downtown-los-angeles-downtown-la-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-sand-paper.JPG
-- name: razorwire-DSC-0080-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-purple-storm.jpg
-- name: braceros-domingo-ulloa-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-cemetery_36690406946_o.jpg
-- name: dragon-desert-desert-dragon-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-gan-vogh.jpg
-- name: downtheline-downtheline-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alberto-giacometti.jpg
-- name: old-house-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dark-soul.jpg
-- name: beach-rocks-beach-rocks-currents-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colored-circuits.jpg
-- name: aws-s3-stories-yuma-downtown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-yuma-downtown.jpg
-- name: abandonedbuildings_umberto_bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_umberto_bocc.jpg
-- name: school-clouds-church-clouds-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-jap-dys-1.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-granite.jpg
-- name: bf-skinner-new-york-city-skyline_36655833162_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-new-york-city-skyline_36655833162_o.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-bright-sand.jpg
-- name: old-house-oldhouse-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-dream.jpg
-- name: school-clouds-church-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-feed-people.jpg
-- name: trucksilo-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
-- name: old-granary-field-granaryfield-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-graham-sutherland.jpg
-- name: subway-subway-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-kandinsky-bv.jpg
-- name: curtain-curtain-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
-- name: statue-of-liberty-front-view-statueofliberty-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smoking-cigarette.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-copper-circuit.JPG
-- name: gears-4882162452-fa3126b38d-b-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-kandinsky-bv.jpg
-- name: powerlines-power-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-rainbow-festival.jpg
-- name: art-albert-giacometti-Isaku Yanaihara.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-albert-giacometti-Isaku
-    Yanaihara.jpg
-- name: windowmountain-window-mountain-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gred-mash.jpg
-- name: dragon-desert-desert-dragon-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-plentiful.jpg
-- name: berlinwall2-berlinwall-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crafty-painting.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-4.jpg
-- name: bf-skinner-waterfront-in-italy-mist.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-waterfront-in-italy-mist.jpg
-- name: adam-smith-adam-smith-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-sand-paper.jpg
-- name: stalin-time-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-bletchley-computer-racks.jpg
-- name: gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-hot-spicy.jpg
-- name: school-clouds-church-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds.jpg
-- name: docks-docks-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
-- name: nazi-invasion-subway-brooklyn-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-subway-brooklyn-station.jpg
-- name: white-house-whitehouse-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-wols.jpg
-- name: white-house-lawn-white-house-window-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-rain.jpg
-- name: abe-lincoln-one-yellow-paper-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-paper-file-00-00-15-87.jpg
-- name: razorwire-DSC-0080-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-wols.jpg
-- name: downtown-los-angeles-downtown-la-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit.JPG
-- name: school-clouds-church-clouds-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dry-skin.jpg
-- name: hollywood-building-hollywood-building-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit.jpg
-- name: oldcabin-oldcabin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-monet-one.jpg
-- name: copper-circuit-electric-tower-sun-behind.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-electric-tower-sun-behind.jpg
-- name: la-muse-docks-water-front-ships-containers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-docks-water-front-ships-containers.jpg
+- name: oldbarn-oldbarn-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crunch-paper.jpg
+- name: oldsmallboat-oldsmallboat-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-mucha-mult.jpg
+- name: power-lines-power-lines-empty-space-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
+- name: ellis-island-ellis-island-room-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-rain.jpg
+- name: old-door-lock-old-door-lock-2-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-brush.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-constitution.jpg
+- name: art-museum-art-museum-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-granite.jpg
+- name: fence-mexico-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-alien-goggles.jpg
+- name: mosaic-face-mosaic-face-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-really-hot.jpg
+- name: aws-s3-stories-castle-on-hill-edinburgh-blue-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-blue-circuit.JPG
+- name: yuma-bank-yuma-bak-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-emily-carr.jpg
+- name: old-door-lock-old-door-lock-2-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-kand-two.jpg
+- name: gypsy-wagon-gypsywagon-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-neo-instinct.jpg
+- name: blossombar-far-away-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-00-00.jpg
+- name: old-door-lock-old-door-lock-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2.jpg
+- name: windowmountain-window-mountain-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-granite.jpg
+- name: old-door-lock-old-door-lock-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-colored-circuits.jpg
+- name: castle-wall-DSC-0067-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-crafty-painting.JPG
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purple-storm.jpg
+- name: gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-blue-circuit.jpg
+- name: berlinwall-DSC-0084-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purp-paper.jpg
+- name: old-door-lock-old-door-lock.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock.jpg
+- name: machine-road-machine-road-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-bright-sand.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
+- name: la-muse-los-angeles-downtown-from-afar.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-los-angeles-downtown-from-afar.jpg
+- name: aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-blue-circuit.jpg
+- name: old-cabin-oldcabin-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-aqua.jpg
+- name: fence-fence-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-granite.jpg
+- name: sand-hand-sand-hand-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-marcel-duchamp.jpg
+- name: curtain-curtain-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-atari-missle.jpg
+- name: lincoln-memorial-lincolnmemorial-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-aqua.jpg
+- name: la-muse-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-capital_36728421355_o.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dark-rain.jpg
+- name: subway-subway-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alberto-giacometti.jpg
+- name: san-francisco-street-view-san-francisco-street-view-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gan-vogh.jpg
+- name: white-house-lawn-white-house-window-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-gred-mash.jpg
+- name: server-cloud-server-racks-clouds-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-china-prop.jpg
+- name: containership-containership-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-soul.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+- name: adam-smith-adam-smith-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-spagetti-accident.jpg
+- name: ellis-island-ellisisland-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-cinnamon-rolls.jpg
+- name: store-on-corner-oldcabin-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crafty-painting.jpg
+- name: meadowbutterfly-meadow-butterfly-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dark-rain.jpg
+- name: lincoln-memorial-lincolnmemorial-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-plentiful.jpg
+- name: beach-rocks-beach-rocks-currents-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-green-zuma.jpg
+- name: la-muse-cruise-ship-shore-log.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cruise-ship-shore-log.jpg
+- name: abe-lincoln-one-sunday-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sunday-file-00-00-00-00.jpg
+- name: locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-cinnamon-rolls.jpg
+- name: la-muse-japanese-garden-tree.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-japanese-garden-tree.jpg
+- name: mediterranean-mediterranean-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-rainbow-festival.jpg
+- name: bordercrossing-bordercrossing-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-blocks.jpg
 ---
 'Ancient Spider' Fossil Turns Out To Be Crayfish With Painted Legs.&nbsp;Warren, Back In Oklahoma, Sees Tribal Leaders In Private.&nbsp;Slot Machine? Packers, Matt LaFleur Move Davante Adams Around In Search Of More Production.&nbsp;Chinas Public Diplomacy On Social Media.&nbsp;Phoenix Zoo's Beloved Giraffe 'Makope' Dies.&nbsp;Frisco Attorney Named To Club For Large Settlements.&nbsp;Mexican Wrestlers Thrill Public At Historic Metro Station.&nbsp;Deadline Come And Gone.&nbsp;
